# xfactor-bot3

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  build-intel.sh  pyproject.toml  requirements-minimal.txt  requirements.txt
.github/workflows/: build-desktop.yml  build-legacy-mac.yml  build-release.yml
desktop/: README.txt  package-lock.json  package.json
desktop/scripts/: build_backend.py  build_backend_x64.py  bundle-backend.py  run_backend.py  start-backend.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile  docker-compose.yml
docs/: DESKTOP_INSTALLATION.txt  xfactor-bot-37-bots-diagram.drawio  xfactor-bot-dataflow.drawio
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIAssistant.tsx  AdminPanel.tsx  AutoOptimizer.tsx  BotManager.tsx  BotPerformanceChart.tsx  BrokerConfig.tsx  CollapsiblePanel.tsx  CommodityPanel.tsx  ComplianceWarning.tsx  CryptoPanel.tsx  Dashboard.tsx  DemoModeBanner.tsx  EquityChart.tsx  FeeTracker.tsx  ForecastingPanel.tsx  Header.tsx  HelpModal.tsx  IntegrationsPanel.tsx  NewsFeed.tsx  PositionPerformanceChart.tsx  PositionsTable.tsx  RestrictedFeature.tsx  SettingsPage.tsx  StockAnalyzer.tsx  StrategyPanel.tsx  TraderInsights.tsx  TradingModeSelector.tsx  UnlockModal.tsx
frontend/src/config/: api.ts
frontend/src/context/: TradingModeContext.tsx
frontend/src/contexts/: DemoModeContext.tsx
frontend/src/utils/: openUrl.ts
scripts/: DEPLOY.md  deploy-foresight.sh  deploy-gitlab-min.sh  deploy.sh  preview-min.sh  start_server.sh  stop-min-preview.sh
src/: __init__.py
src/ai/: __init__.py  assistant.py  context_builder.py
src/api/: auth.py  main.py
src/api/routes/: admin.py  ai.py  bots.py  commodities.py  compliance.py  crypto.py  fees.py  forecasting.py  integrations.py  optimizer.py  performance.py  positions.py  seasonal.py  stock_analysis.py  symbols.py
src/banking/: __init__.py  plaid_client.py
src/bot/: __init__.py  auto_optimizer.py  bot_instance.py  bot_manager.py
src/brokers/: __init__.py  alpaca_broker.py  base.py  ibkr_broker.py  registry.py  schwab_broker.py  tradier_broker.py
src/compliance/: __init__.py  compliance_manager.py
src/config/: exchanges.py  settings.py
src/data/: redis_cache.py
src/data_sources/: __init__.py  ainvest.py  base.py  commodities.py  crypto.py  registry.py  tradingview.py
src/execution/: order_manager.py
src/fees/: __init__.py  fee_tracker.py
src/mcp/: __init__.py  server.py
src/monitoring/: metrics.py
src/news_intel/: local_file_watcher.py
src/strategies/: __init__.py  mean_reversion.py  momentum.py  seasonal_events.py  ta_compat.py  technical.py
tests/: conftest.py  test_api_bots.py  test_api_integrations.py  test_api_optimizer.py  test_api_performance.py  test_api_seasonal.py  test_app.py  test_auto_optimizer.py  test_bot_manager.py  test_brokers.py  test_data_sources.py  test_news_intel.py  test_ollama.py  test_risk_manager.py  test_seasonal_events.py  test_strategies.py
xfactor-bot/: Dockerfile  docker-compose.yml  prometheus.yml
