[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.1.1"
description = "IBKR Automated Trading Bot with News Intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Trading Bot", email = "trader@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # IBKR Connection
    "ib_insync>=0.9.86",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    
    # Technical Analysis
    "pandas-ta>=0.3.14b",
    "ta>=0.11.0",
    
    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # HTTP & Web Scraping
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "feedparser>=6.0.10",
    
    # NLP & Sentiment
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "openai>=1.10.0",
    "langdetect>=1.1.0",
    "deep-translator>=1.11.4",
    
    # Document Parsing
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    
    # File Watching
    "watchdog>=3.0.0",
    
    # Task Scheduling
    "APScheduler>=3.10.4",
    
    # Logging & Monitoring
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    
    # Utilities
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
trading-bot = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

