[package]
name = "xfactor-bot"
version = "0.9.8"
description = "XFactor Bot - AI-Powered Automated Trading System"
authors = ["XFactor Trading"]
license = "MIT"
repository = "https://gitlab-master.nvidia.com/cvanthin/000_trading"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "xfactor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
